--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -12301,6 +12301,36 @@ Para procesar los 493 documentos de la colección de prueba se requirieron
  
 \end_layout
 
+\begin_layout Subsection
+Ponderación de las categorías
+\end_layout
+
+\begin_layout Standard
+Los enfoques de 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "AlexanderGelbukh2005"
+
+\end_inset
+
+, 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Daoud2008"
+
+\end_inset
+
+ y 
+\begin_inset CommandInset citation
+LatexCommand citet
+key "Sieg2007"
+
+\end_inset
+
+ requieren que las categorías en la jerarquía tengan un peso asignado.
+ 
+\end_layout
+
 \begin_layout Chapter
 Conclusión
 \end_layout
