antes de usar el algorithm

--- a/MarcoTeorico_10611066.lyx
+++ b/MarcoTeorico_10611066.lyx
@@ -12512,6 +12512,10 @@ Donde
  El proceso de evolución se puede ver resumido en el algoritmo.
 \end_layout
 
+\begin_layout Standard
+
+\end_layout
+
 \begin_layout Section
 Implementación del servicio
 \end_layout
